--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -3,8 +3,44 @@
 
 
 {% block content %}
-<link rel="stylesheet" href="{% static '/scss/store/base.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
+<link rel="stylesheet" href="{% static '/scss/page/search.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
 
-
+<div class="page">
+    <div class="backtohome" onclick="history.back()">
+        <span></span><h1>Tilbake</h1>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    {% if query %} 
+        {% if results %}
+        <div class="search-results">
+            <div class="text">
+                <h1 class="section-heading">Søkeresultater</h1>
+                <p class="headingp">Du søkte for " {{query}} "</p>
+            </div>
+                {% for product in results %}
+            <div class="services">
+                <div class="service">
+                    <img src="{{product.image.url}}" alt="" class="service-image">
+                    <div class="reviews">
+                       <p><i class="fa-solid fa-star"></i>3</p><span>(40)</span>
+                    </div>
+                    <div class="name">{{product.name}}</div>
+                    <div class="business-name">{{product.business_name}}</div>
+                    <button>Les mer</button>
+                 </div>
+            </div>
+            {% endfor %}
+        </div>
+        {% else %}
+        ingen finn
+        {% endif %}
+        {% else %}
+        ingen søk
+    {% endif %}
+</div>
 {% endblock %}
