--- a/static/scss/page/pages.css
+++ b/static/scss/page/pages.css
@@ -15,6 +15,13 @@
   min-height: 88vh !important;
   padding-inline: 25px;
 }
+.page .logo2 {
+  width: 85px;
+  height: auto;
+  position: absolute;
+  top: 33px;
+  right: 30px;
+}
 .page .backtohome {
   position: absolute;
   left: 25px;
