--- a/apps/core/templates/core/search-results.html
+++ b/apps/core/templates/core/search-results.html
@@ -11,6 +11,7 @@
     <div class="backtohome" onclick="history.back()">
         <span></span><h1>Tilbake</h1>
     </div>
+    <img class="logo2" src="{% static '/images/logo/logo-black.png' %}" alt="logo2">
     <br>
     <br>
     <br>
