--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -21,7 +21,7 @@
          <div class="text">
             <h1 class="cover-heading">Finn den tjenesten du trenger i Lillehammer</h1>
             <p class="paragraph">
-               Enkel og grei løsning til å finne de tjenestene du trenger, på noen få klikk
+               Enkel og grei løsning til å finne de tjenestene du trenger på noen få klikk
             </p>
          </div>
          <div class="cover-search">
@@ -44,7 +44,7 @@
       </div>
       <div class="services-cards">
          {% for product in products %}
-         <div class="service">
+         <div class="service" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
             <img src="{{product.image.url}}" alt="" class="service-image">
             <div class="reviews">
                <p><i class="fa-solid fa-star"></i>3</p><span>(40)</span>
