--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -34,7 +34,7 @@ $txt: #183b56;
       text-align: center;
       .cover-heading{
         color: $white;
-        font-size: 28px;
+        font-size: 27px;
         margin-bottom: 15px;
         font-weight: 800;
       }
@@ -98,7 +98,7 @@ $txt: #183b56;
   height: auto;
   .content{
     padding: 35px 25px;
-    padding-bottom: 25px;
+    padding-bottom: 22px;
     .text{
       text-align: left;
     }
@@ -122,6 +122,8 @@ $txt: #183b56;
         margin: 0 25px;
         padding: 0;
         position: relative;
+        transition: .2s;
+        cursor: pointer;
         .service-image{
           width: 100%;
           height: 105px;
@@ -187,6 +189,15 @@ $txt: #183b56;
         &:first-child{
           margin-left: 0;
         }
+        &:hover{
+          .name{
+            text-decoration: underline;
+          }
+          .service-image{
+            transition: .2s;
+            filter: brightness(85%);
+          }
+        }
       }
     }
   }
@@ -215,6 +226,8 @@ $txt: #183b56;
       padding: 14px;
       background: white;
       border-radius: 4px;
+      cursor: pointer;
+      transition: .2s;
       &:first-child{
         margin-top: 0;
       }
@@ -244,6 +257,14 @@ $txt: #183b56;
           font-size: 13px;
           opacity: 0.9;
         }
+      }
+      &:hover{
+        transform: scale(1.05);
+        filter: brightness(95%);
+      }
+      &:focus, &:active{
+        transform: scale(1.08);
+        filter: brightness(93%);
       }
     }
   }
