--- a/static/scss/store/nav.scss
+++ b/static/scss/store/nav.scss
@@ -50,6 +50,12 @@ $txt: #183b56;
             opacity: 0;
         }
         .logo{
+            h1{
+                color: $txt;
+                span{
+                    border-color: $primBtn;
+                }
+            }
           .logo1{
             display: none;
           }
@@ -68,6 +74,12 @@ $txt: #183b56;
       background: #ffffff;
       border-bottom: 1px solid rgba(160,160,160,0.1);
       .logo{
+        h1{
+            color: $txt;
+            span{
+                border-color: $primBtn;
+            }
+        }
         .logo1{
             display: none;
           }
@@ -94,18 +106,27 @@ $txt: #183b56;
     .logo{
         transition: .8s;
         cursor: pointer;
-        transform: translateY(1.5px);
+        transform: translateY(4px);
         width: auto;
         height: auto;
         z-index: 1000;
-      img{
-        width: 105px;
-        height: auto;
-        transition: .3s;
-        &:hover{
-            transform: scale(1.05);
+        h1{
+            color: $white;
+            font-size: 16px;
+            span{
+                font-size: 12px;
+                border-bottom: 1px solid $white;
+                padding-bottom: 3px;
+            }
         }
-      }
+    //   img{
+    //     width: 105px;
+    //     height: auto;
+    //     transition: .3s;
+    //     &:hover{
+    //         transform: scale(1.05);
+    //     }
+    //   }
       .logo2{
         display: none;
       }
@@ -119,17 +140,17 @@ $txt: #183b56;
         height: auto;
         z-index: 1000;
         text-align: center;
-        transform: translateY(2px);
+        transform: translateY(2px) translateX(7px);
         span{
-            height: 3px;
+            height: 2px;
             width: 26px;
             background: $white;
             border-radius: 3px;
             display: block;
             transition: .2s;
-            margin: 7px auto;
+            margin: 6px auto;
             transform-origin: 23%; 
-            opacity: 0.9;
+            opacity: 0.83;
         }
         .upper-span{
         }
@@ -219,6 +240,51 @@ $txt: #183b56;
             }
         }
     }
+    .nav-search{
+        position: absolute;
+        top: 60px;
+        width: calc(100% - 50px);
+        display: none;
+        i{
+          position: absolute;
+          font-size: 14px;
+          color: #183b56a9;
+          right: 25px;
+          top: 13px;
+          padding: 5px;
+          margin: -5px;
+          background: rgba(155, 155, 155, 0.22);
+          border-radius: 100%;
+        }
+        input{
+          width: 100%;
+          height: 40px;
+          border: none;
+          outline: none;
+          padding: 7px;
+          background: $white;
+          color: $txt;
+          border-radius: 4px;
+          font-size: 15px;
+          &::placeholder{
+            color: $txt;
+            opacity: 0.8;
+          }
+        }
+        button{
+          font-size: 14.5px;
+          background: $primBtn;
+          color: $white;
+          text-align: center;
+          width: 100%;
+          height: 45px;
+          margin-top: 15px;
+          border-radius: 4px;
+          outline: none;
+          border: none;
+          font-weight: normal;
+        }
+      }
 }
 
 // // SMALL DESKTOP
