--- a/static/scss/store/product/product.css
+++ b/static/scss/store/product/product.css
@@ -1,1 +1,63 @@
-/*# sourceMappingURL=product.css.map */
+#footer {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+#mobileNav {
+  padding-bottom: 100px;
+}
+#mobileNav .nav-search {
+  display: block;
+}
+
+.page {
+  background: white;
+}
+.page .mapouter {
+  width: 100%;
+  height: 400px;
+}
+
+.product-section {
+  position: relative;
+  padding-top: 95px;
+  padding-inline: 25px;
+}
+.product-section .product-image {
+  width: 100%;
+  height: 280px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  filter: brightness(85%);
+}
+.product-section .text {
+  margin-top: 10px;
+}
+.product-section .text .reviews {
+  display: flex;
+  margin-block: 3px;
+}
+.product-section .text .reviews p {
+  margin-bottom: 0;
+  color: #FFBC55;
+  font-size: 12px;
+  margin-top: 1px;
+}
+.product-section .text .reviews p i {
+  transform: translateY(-0.9px);
+  margin-right: 3px;
+  font-size: 11px;
+}
+.product-section .text .reviews span {
+  color: rgb(170, 170, 170);
+  font-size: 11px;
+  transform: translateX(4px) translateY(2px);
+}
+.product-section .text .name {
+  font-size: 25px;
+  color: #183b56;
+}
+.product-section .text .business-name {
+  font-size: 13px;
+  color: #183b56;
+  opacity: 0.7;
+}/*# sourceMappingURL=product.css.map */
