--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -1,1 +1,65 @@
-// STANDARD PHONE
+$black: #1F1F1F;
+$white: rgb(246,246,246);
+$primBtn: #06c484;
+$txt: #183b56;
+
+
+#footer{
+    border-top: 1px solid rgba(0,0,0,0.1);
+}
+#mobileNav{
+    padding-bottom: 100px;
+    .nav-search{
+        display: block;
+    }
+}
+.page{
+    background:  white;
+    .mapouter{
+        width: 100%;
+        height: 400px;
+    }
+}
+.product-section{
+    position: relative;
+    padding-top: 95px;
+    padding-inline: 25px;
+    .product-image{
+        width: 100%;
+        height: 280px;
+        object-fit: cover;
+        filter: brightness(85%);
+    }
+    .text{
+        margin-top: 10px;
+        .reviews{
+            display: flex;
+            margin-block: 3px;
+            p{
+              margin-bottom: 0;
+              color: #FFBC55;
+              font-size: 12px;
+              margin-top: 1px;
+              i{
+                transform: translateY(-0.9px);
+                margin-right: 3px;
+                font-size: 11px;
+              }
+            }
+            span{
+              color: rgb(170, 170, 170);
+              font-size: 11px;
+              transform: translateX(4px) translateY(2px);
+            }
+          }
+        .name{
+            font-size: 25px;
+            color: $txt;
+        }
+        .business-name{
+            font-size: 13px;
+            color: $txt;
+            opacity: 0.7;
+        }
+    }
+}
